# stdiofs

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deps.sh
.github/workflows/: build.yml
doc/: protocol.md
provider/python/: stdiofs_provider.py
rules/: stdiofs.in  stdiofs.make
src/: main.c  passthroughfs.c  proxyfs.c  proxyfs.h
src/fs/: operations.h  proxy.c  proxy.h  proxy_old.c  stub.c  stub.h  stub_intern.h
src/rpc/: arg.h  buffer.c  buffer.h  rpc.c  rpc.h  serializer.c
src/stdiofs/: passthroughfs.c  passthroughfs.h  proxyfs.c
src/stdiofs/app/: main.c  provider.c
src/stdiofs/fs/: dirbuffer.h  methods.h  operations.h  proxy.c  proxy.h  proxy_old.c  stringlist.h  stub.c  stub.h  stub_intern.h  stub_operations.c  stub_operations.h
src/stdiofs/rpc/: arg.h  buffer.c  buffer.h  connection.c  connection.h  deserializer.c  deserializer.h  methods.h  rpc.c  rpc.h  serializer.c  serializer.h  status.h  stub.c  stub.h  types.c  types.h
src/stdiofs/rpc/type/: bytes.c  dev.c  dirbuffer.c  dirbuffer.h  gid.c  int.c  mode.c  offset.c  size.c  stat.c  statvfs.c  string.c  stringlist.c  stringlist.h  u64.c  uid.c
src/stdiofs/util/: connection_monitor.c  connection_monitor.h
test/rpc/: buffer.cpp  serializer.cpp
test/stdiofs/rpc/: buffer.cpp  connection.cpp  deserializer.cpp  serializer.cpp
test/stdiofs/rpc/type/: dirbuffer.cpp  int.cpp  stringlist.cpp  unknown.cpp
util/: statvfs.c
